interface : fix de la différence entre entrer et shift+enter

--- a/Groupes/interaction/flask-ChatLaw/Ajax_based/static/chatroom.css
+++ b/Groupes/interaction/flask-ChatLaw/Ajax_based/static/chatroom.css
@@ -14,13 +14,14 @@ p{
 }
 
 #logs{
+	display: block;
 	margin-top:3px;
 	background-color: #ffffff;
 	border:1px solid gray;
 	width:100%;
 	height:85%;
 }
-#message{
+#message-box{
 	margin-top:3px;
 	background-color: #ffffff;
 	border:1px solid gray;
